--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="card">
       <div class="row">
         <label for="pokemonInput">Pokémon Name/ID</label>
-        <input id="pokemonInput" type="text" placeholder="pikachu or 25" />
+        <input id="pokemonInput" type="text" placeholder="Name or ID" />
         <button id="submitBtn" type="button">Submit</button>
       </div>
       <p id="status" class="status"></p>
